fix product spacing

--- a/scss/components/categories-list.scss
+++ b/scss/components/categories-list.scss
@@ -32,6 +32,7 @@
     width: 42vw;
     height: 50vw;
     top: 55px;
+    left: -15.5vw;
     li {
       margin-bottom: 15px;
     }
