--- a/scss/components/filter-list.scss
+++ b/scss/components/filter-list.scss
@@ -29,5 +29,6 @@
   .filter-list {
     width: 42vw;
     top: 73px;
+    right: -20vw;
   }
 }
